# equipment-cycle-hotkeys

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  todo.md  vcpkg-configuration.json  vcpkg.json
cmake/ports/clib-ng-alt/: portfile.cmake  vcpkg.json
cmake/ports/clibng/: portfile.cmake  vcpkg.json
cmake/ports/commonlibsse-ng/: vcpkg.json
misc/: EquipmentCycleHotkeys.json  changelog.md  manual_qa.md  manual_qa.txt  manual_testing.md  mod_desc.md  todo.md
misc/SKSE/Plugins/: EquipmentCycleHotkeys.json
src/: dev_util.h  equipsets.h  event_handler.h  fs.h  gear.h  hotkeys.h  input_handler.h  ir.h  keys.h  main.cpp  main_dev.cpp  main_imgui.cpp  pch.h  serde.h  settings.h  tes_util.h  ui.h  ui_drawing.h  ui_plumbing.h  ui_state.h  ui_viewmodels.h
tests/: equipset_tests.cpp  fs_tests.cpp  hotkey_tests.cpp  ir_tests.cpp  key_tests.cpp  misc_tests.cpp  pch.h  serde_tests.cpp  test_util.h  ui_state_tests.cpp  ui_viewmodel_tests.cpp
